test_regress/t/t_prot_lib_inout_bad.out
%Error: t/t_prot_lib_inout_bad.v:8: Unsupported: protect-lib port direction: INOUT
                    inout  z,
                           ^
%Error: Exiting due to
